# my_bachelor_thesis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  load_videos.sh  main.py  pyproject.toml  start_data.json
config/: settings.py
database/: __init__.py  database.py
helpers/: helpers.py
notebooks/reports/: yolo_train_pipeline.ipynb
src/: main.py
src/database/: config.py  crud.py  database.py  model.py
src/helpers/: helpers.py
src/services/: config.py  video_loader.py  video_processer.py
