[tool.poetry]
name = "stargate"
version = "0.1.0"
description = "Basketball-project"
authors = ["Igor Leschenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
ruff = "^0.1.7"
loguru = "^0.7.2"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
ultralytics = "^8.0.227"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
venv-dir = "venv"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D1", "D203", "D213", "FA102", "ANN101"]

[tool.ruff.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["whole_app"]

[tool.ruff.extend-per-file-ignores]
"stargate/tests/*.py" = ["ANN401", "S101", "S311"]